--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
     "css-loader": "^2.0.0",
+    "deepmerge": "^3.0.0",
     "fast-async": "^7.0.6",
     "html-webpack-plugin": "^3.2.0",
     "sass-loader": "^7.1.0",
