--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
     "css-loader": "^2.0.0",
+    "deepmerge": "^3.0.0",
     "fast-async": "^7.0.6",
     "html-webpack-plugin": "^3.2.0",
+    "is-plain-object": "^2.0.4",
+    "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.10",
+    "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
     "react": "^16.6.3",
