--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "babel-loader": "^8.0.4",
     "css-loader": "^2.0.0",
     "deepmerge": "^3.0.0",
+    "eslint": "^5.10.0",
+    "eslint-plugin-react": "^7.11.1",
     "fast-async": "^7.0.6",
     "html-webpack-plugin": "^3.2.0",
     "is-plain-object": "^2.0.4",
