--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
+    "path-to-regexp": "^2.4.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router": "^4.4.0-beta.6",
