--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "path-to-regexp": "^2.4.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-helmet": "^5.2.0",
     "react-intl": "^2.7.2",
     "react-router": "^4.4.0-beta.6",
     "react-router-dom": "^4.4.0-beta.6"
