--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
     "react-intl": "^2.7.2",
+    "react-redux": "^6.0.0",
     "react-router": "^4.4.0-beta.6",
-    "react-router-dom": "^4.4.0-beta.6"
+    "react-router-dom": "^4.4.0-beta.6",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   }
 }
