--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
+    "connected-react-router": "^6.1.0",
     "path-to-regexp": "^2.4.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
