--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "dev": "webpack-dev-server --mode development --config webpack.dev.config.js --hot",
+    "dev": "webpack-dev-server --mode development --config webpack.dev.config.js",
     "build": "webpack -p --config webpack.prod.config.js",
     "eslint": "eslint src --ext .js"
   },
@@ -26,6 +26,7 @@
     "html-webpack-plugin": "^3.2.0",
     "is-plain-object": "^2.0.4",
     "node-sass": "^4.11.0",
+    "react-hot-loader": "^4.6.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.1",
